# gptctl

./: CHANGELOG.md  CONTRIBUTING.md  DEMOS.md  INSTALL.md  INTRODUCTION.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat
src/chatgptctl/: __init__.py  cli.py
src/chatgptctl/commands/config/: __init__.py  config_init.py  show.py
src/chatgptctl/commands/export/: __init__.py  json.py  markdown.py
src/chatgptctl/commands/view/: list.py  show.py
src/chatgptctl/utils/: utils.py
src/gptctl/: __init__.py  cli.py  config.py  definitions.py
src/gptctl/commands/config/: config_init.py  show.py
src/gptctl/commands/export/: __init__.py  extract.py  json.py  markdown.py
src/gptctl/commands/view/: __init__.py  list.py  show.py
src/gptctl/utils/: json_openai.py  suggestions.py  utils.py
tests/: test_cli.py  test_config.py  test_export_json.py  test_export_markdown.py  test_json_openai.py  test_utils_suggestions.py
tests/data/: config.json
