[project]
name = "gptctl"
version = "0.1.1"
description = "CLI to migrate, export, explore individual chatgpt conversation as well as in a batch!"
authors = [{ name = "ZIgr", email = "zaporozhets.igor@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "jinja2>=3.1.6",
    "typer",
]

[project.optional-dependencies]
dev = [
    "myst-nb>=1.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "sphinx-autoapi>=3.6.0",
    "sphinx-rtd-theme>=3.0.2",
]

[dependency-groups]
dev = [
    "myst-nb>=1.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-print>=1.1.0",
    "python-semantic-release>=10.4.1",
    "sphinx-autoapi>=3.6.0",
    "sphinx-rtd-theme>=3.0.2",
]

[project.scripts]
gptctl = "gptctl.cli:app"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gptctl"]

[tool.hatch.build]
include = [
    "src/",
    "CHANGELOG.md",
    "CONDUCT.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "README.md",
    "INTRODUCTION.md",
    "INSTALL.md",
]
exclude = ["/data"]
